...
      android:hint="@string/first_name"
      android:textColorHint="@color/lightBlue"
      app:hintTextAppearance="@style/WhiteTextInputLayout"
      tools:ignore="LabelFor">

      <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightBlue"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textCapWords"
        android:maxLength="30"
...
      android:hint="@string/last_name"
      android:textColorHint="@color/lightBlue"
      app:hintTextAppearance="@style/WhiteTextInputLayout"
      tools:ignore="LabelFor">

      <EditText
        android:id="@+id/lastNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightBlue"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textCapWords"
        android:maxLength="30"
...
