<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/ic_fingerprint_background"
  tools:context="com.kimlic.passcode.PasscodeActivity">

  <LinearLayout
    android:id="@+id/rootUpper"
    android:layout_width="@dimen/content_width"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:baselineAligned="true"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextSwitcher
      android:id="@+id/titleTs"
      android:layout_width="@dimen/content_width"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_gravity="center_horizontal"/>

    <TextSwitcher
      android:id="@+id/subtitleTs"
      android:layout_width="@dimen/content_width"
      android:layout_height="48dp"/>

  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="@dimen/content_width"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:baselineAligned="true"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/cancelTv"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/rootUpper">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_gravity="center"
      android:padding="16dp">

      <Button
        android:id="@+id/dot1Bt"
        style="@style/PasscodeDot"
        android:tag="1"/>

      <Button
        android:id="@+id/dot2Bt"
        style="@style/PasscodeDot"
        android:tag="2"/>

      <Button
        android:id="@+id/dot3Bt"
        style="@style/PasscodeDot"
        android:tag="3"/>

      <Button
        android:id="@+id/dot4Bt"
        style="@style/PasscodeDot"
        android:tag="4"/>

    </LinearLayout>

    <GridLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:columnCount="3"
      android:rowCount="4"
      android:useDefaultMargins="true">

      <Button
        android:id="@+id/passcodeBt1"
        style="@style/PasscodeCircleButton"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/_1"/>

      <Button
        android:id="@+id/passcodeBt2"
        style="@style/PasscodeCircleButton"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/_2"/>

      <Button
        android:id="@+id/passcodeBt3"
        style="@style/PasscodeCircleButton"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/_3"/>

      <Button
        android:id="@+id/passcodeBt4"
        style="@style/PasscodeCircleButton"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/_4"/>

      <Button
        android:id="@+id/passcodeBt5"
        style="@style/PasscodeCircleButton"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/_5"/>

      <Button
        android:id="@+id/passcodeBt6"
        style="@style/PasscodeCircleButton"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/_6"/>

      <Button
        android:id="@+id/passcodeBt7"
        style="@style/PasscodeCircleButton"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/_7"/>

      <Button
        android:id="@+id/passcodeBt8"
        style="@style/PasscodeCircleButton"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/_8"/>

      <Button
        android:id="@+id/passcodeBt9"
        style="@style/PasscodeCircleButton"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/_9"/>

      <Button
        android:id="@+id/passcodeDeleteBt"
        android:layout_width="72dp"
        android:layout_height="56dp"
        android:layout_column="0"
        android:layout_row="3"
        android:background="@drawable/ic_num_pad_delete"
        android:elevation="@dimen/button_elevation"
        android:textSize="24sp"/>

      <Button
        android:id="@+id/passcode0Bt"
        style="@style/PasscodeCircleButton"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/_0"/>

      <!--<Button-->
        <!--android:id="@+id/passcodeOkBt"-->
        <!--style="@style/PasscodeCircleButtonOk"-->
        <!--android:layout_column="2"-->
        <!--android:layout_row="3"-->
        <!--android:enabled="false"-->
        <!--android:text="@string/ok"/>-->

    </GridLayout>

  </LinearLayout>

  <TextView
    android:id="@+id/cancelTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="24dp"
    android:gravity="center"
    android:text="@string/cancel"
    android:textColor="@android:color/white"
    android:textSize="@dimen/button_text_size"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
    />

</android.support.constraint.ConstraintLayout>