...
    android:background="@drawable/button_rounded_blue"
    android:elevation="@dimen/button_elevation"
    android:text="@string/import_"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="@dimen/button_text_size"
    app:layout_constraintBottom_toTopOf="@id/cancelTv"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <TextView
    android:id="@+id/cancelTv"
    android:layout_width="wrap_content"
...
