...
    android:textSize="@dimen/title_text_size"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler"
    android:layout_width="@dimen/content_width"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:overScrollMode="never"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
...
    android:layout_marginBottom="16dp"
    android:background="@drawable/button_rounded_blue"
    android:text="@string/sign_out"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    app:layout_constraintBottom_toTopOf="@id/deleteBt"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/deleteBt"
    android:layout_width="@dimen/content_width"
...
